<resources>
    <string name="app_name">TikTakToe</string>
    <string name="welcome_to_tic_tok_toe">Welcome to Tic Tok Toe</string>
    <string name="grid">grid</string>
    <string name="img1">img1</string>
    <string name="img2">img2</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
    <string name="img5">img5</string>
    <string name="img6">img6</string>
    <string name="img7">img7</string>
    <string name="img9">img9</string>
    <string name="img8">img8</string>
    <string name="x_s_turn_on">X\'s turn on</string>
</resources>
